--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 	<!-- <link rel="stylesheet" href="js/script.js"> -->
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap"
-		rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap" rel="stylesheet">
 	<!-- BaguetteBox Gallery -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.css">
 
@@ -52,7 +51,7 @@
 			</div>
 		</div>
 	</div>
-	
+
 	<!-- End Top Bar -->
 
 	<!-- Navigation -->
@@ -60,9 +59,8 @@
 		<div class="container">
 			<a class="navbar-brand" href="#">Electrician</a>
 			<a href="" class="d-none d-block d-lg-none"><i class="fas fa-cart-plus text-muted"></i></a>
-			<button class="navbar-toggler border-0" type="button" data-toggle="collapse"
-				data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-				aria-label="Toggle navigation">
+			<button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+				aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 
@@ -75,8 +73,8 @@
 						<a class="nav-link" href="#AboutUs">About Us</a>
 					</li>
 					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+							aria-haspopup="true" aria-expanded="false">
 							Services
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -115,7 +113,7 @@
 
 	<!-- Image Carousel -->
 	<div id="carousel1" class="carousel slide carousel-fade mb-lg-5" data-interval="4000" data-ride="carousel">
-			<div class="carousel-inner">
+		<div class="carousel-inner">
 			<div class="carousel-item active">
 				<img src="img/carousel/mainslide-01.jpg" class="d-block w-100" alt="First slide">
 				<div class="carousel-caption d-none d-md-block">
@@ -142,9 +140,8 @@
 		<div class="navbar navbar-expand-lg navbar-dark bg-dark py-3 container myform">
 			<div class="mx-auto">
 				<button class="navbar-toggler bg-success text-light rounded-top border-0 p-3" type="button"
-					data-toggle="collapse" data-target="#RequestService" aria-controls="RequestService"
-					aria-expanded="false" aria-label="Toggle navigation">Request Service Today <i
-						class="fas fa-angle-double-down mx-3"></i>
+					data-toggle="collapse" data-target="#RequestService" aria-controls="RequestService" aria-expanded="false"
+					aria-label="Toggle navigation">Request Service Today <i class="fas fa-angle-double-down mx-3"></i>
 				</button>
 				<div class="collapse navbar-collapse" id="RequestService">
 					<ul class="navbar-nav form-group myform">
@@ -222,8 +219,7 @@
 								that your premises are always maintained and compliant.
 							</p>
 						</div>
-						<button type="button" class="btn btn-success rounded-circle btnTogg mt-3"><i
-								class="fas fa-plus"></i>
+						<button type="button" class="btn btn-success rounded-circle btnTogg mt-3"><i class="fas fa-plus"></i>
 						</button>
 					</div>
 				</div>
@@ -241,8 +237,7 @@
 								that your premises are always maintained and compliant.
 							</p>
 						</div>
-						<button type="button" class="btn btn-success rounded-circle btnTogg mt-3"><i
-								class="fas fa-plus"></i>
+						<button type="button" class="btn btn-success rounded-circle btnTogg mt-3"><i class="fas fa-plus"></i>
 						</button>
 					</div>
 				</div>
@@ -260,8 +255,7 @@
 								that your premises are always maintained and compliant.
 							</p>
 						</div>
-						<button type="button" class="btn btn-success rounded-circle btnTogg mt-3"><i
-								class="fas fa-plus"></i>
+						<button type="button" class="btn btn-success rounded-circle btnTogg mt-3"><i class="fas fa-plus"></i>
 						</button>
 					</div>
 				</div>
@@ -297,12 +291,12 @@
 					<div class="col-md-12 d-flex justify-content-center mb-5">
 						<button type="button" class="btn poppi font-weight-bold waves-effect filter active"
 							data-rel="all">All</button>
-						<button type="button" class="btn poppi font-weight-bold waves-effect filter"
-							data-rel="1">Commercial Services</button>
-						<button type="button" class="btn poppi font-weight-bold waves-effect filter"
-							data-rel="2">Industrial Services</button>
-						<button type="button" class="btn poppi font-weight-bold waves-effect filter"
-							data-rel="3">Residential Services</button>
+						<button type="button" class="btn poppi font-weight-bold waves-effect filter" data-rel="1">Commercial
+							Services</button>
+						<button type="button" class="btn poppi font-weight-bold waves-effect filter" data-rel="2">Industrial
+							Services</button>
+						<button type="button" class="btn poppi font-weight-bold waves-effect filter" data-rel="3">Residential
+							Services</button>
 					</div>
 				</div>
 
@@ -430,15 +424,13 @@
 						</div>
 						<div class="modal-body">
 							<form action="" class="mx-3">
-								<input type="text" name="name" placeholder="Your Name"
-									class="border border-muted w-100 m-3 p-2" />
+								<input type="text" name="name" placeholder="Your Name" class="border border-muted w-100 m-3 p-2" />
 								<input type="email" name="e-mail" placeholder="Your E-mail Adress"
 									class="border border-muted w-100 m-3 p-2" />
 								<input type="tel" name="phone" placeholder="Your Phone Number"
 									class="border border-muted w-100 m-3 p-2" />
-								<input type="date" name="your-date" value="" size=""
-									class="border border-muted w-100 m-3 p-2" aria-required="true" aria-invalid="false"
-									placeholder="Date">
+								<input type="date" name="your-date" value="" size="" class="border border-muted w-100 m-3 p-2"
+									aria-required="true" aria-invalid="false" placeholder="Date">
 								<textarea name="text" id="" rows="4" placeholder="Your Message"
 									class="border border-muted w-100 m-3 p-2"></textarea>
 							</form>
@@ -707,16 +699,13 @@
 				<div class="col-md-12 mb-3">
 					<button type="button" class="btn poppi font-weight-bold waves-effect filter active"
 						data-rel="all">All</button>
-					<button type="button" class="btn poppi font-weight-bold waves-effect filter"
-						data-rel="1">Other</button>
-					<button type="button" class="btn poppi font-weight-bold waves-effect filter"
-						data-rel="2">Heating</button>
+					<button type="button" class="btn poppi font-weight-bold waves-effect filter" data-rel="1">Other</button>
+					<button type="button" class="btn poppi font-weight-bold waves-effect filter" data-rel="2">Heating</button>
 					<button type="button" class="btn poppi font-weight-bold waves-effect filter" data-rel="3">Air
 						Conditioning</button>
 					<button type="button" class="btn poppi font-weight-bold waves-effect filter" data-rel="4">Security
 						System</button>
-					<button type="button" class="btn poppi font-weight-bold waves-effect filter"
-						data-rel="5">Electrical</button>
+					<button type="button" class="btn poppi font-weight-bold waves-effect filter" data-rel="5">Electrical</button>
 				</div>
 			</div>
 
@@ -779,8 +768,7 @@
 				<div class="col-lg-8 my-3">
 					<img src="img/blog_img01.jpg" class="w-100" alt="">
 					<div class="">
-						<p class="mt-lg-5"><span class="mr-3 font-italic">23 Nov, 2016</span><span
-								class="mr-3 font-italic">
+						<p class="mt-lg-5"><span class="mr-3 font-italic">23 Nov, 2016</span><span class="mr-3 font-italic">
 								Posted by admin
 							</span><span class="mr-3 font-italic">2 Comments</span></p>
 						<h2>
@@ -864,10 +852,9 @@
 					<div class="">
 						<h3 class="">Search</h3>
 						<form class="form-inline bordershadow">
-							<input class="form-control form-control-sm mr-3 w-75 border-0" type="text"
-								placeholder="Search text..." aria-label="Search">
-							<button class="btn btn-outline-none"><i class="fas fa-search"
-									aria-hidden="true"></i></button>
+							<input class="form-control form-control-sm mr-3 w-75 border-0" type="text" placeholder="Search text..."
+								aria-label="Search">
+							<button class="btn btn-outline-none"><i class="fas fa-search" aria-hidden="true"></i></button>
 						</form>
 					</div>
 					<div class="bordershadow my-5">
@@ -916,9 +903,8 @@
 					<div class="card">
 						<div class="card-header bg-white" id="headingOne">
 							<h2 class="mb-0">
-								<button class="btn btn-block text-left font-weight-bold" type="button"
-									data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
-									aria-controls="collapseOne">
+								<button class="btn btn-block text-left font-weight-bold" type="button" data-toggle="collapse"
+									data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
 									Does conduit need to go inside the transformer box?
 								</button>
 							</h2>
@@ -933,9 +919,8 @@
 					<div class="card">
 						<div class="card-header bg-white" id="headingTwo">
 							<h2 class="mb-0">
-								<button class="btn btn-block text-left font-weight-bold collapsed" type="button"
-									data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false"
-									aria-controls="collapseTwo">
+								<button class="btn btn-block text-left font-weight-bold collapsed" type="button" data-toggle="collapse"
+									data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
 									How close to the pole do I bring my conduit to?
 								</button>
 							</h2>
@@ -949,15 +934,13 @@
 					<div class="card">
 						<div class="card-header bg-white" id="headingThree">
 							<h2 class="mb-0">
-								<button class="btn btn-block text-left font-weight-bold collapsed" type="button"
-									data-toggle="collapse" data-target="#collapseThree" aria-expanded="false"
-									aria-controls="collapseThree">
+								<button class="btn btn-block text-left font-weight-bold collapsed" type="button" data-toggle="collapse"
+									data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
 									Is additional conduit required beyond what is installed in the ditch?
 								</button>
 							</h2>
 						</div>
-						<div id="collapseThree" class="collapse" aria-labelledby="headingThree"
-							data-parent="#accordionFAQ">
+						<div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionFAQ">
 							<div class="card-body mb-3">
 								If the service is being supplied from a utility pole, the member is required to
 								supply 1-10 section of SCH 80 PVC and 2-10 sections of SCH 40 PVC to be left near
@@ -968,16 +951,14 @@
 					<div class="card">
 						<div class="card-header bg-white" id="headingFour">
 							<h2 class="mb-0">
-								<button class="btn btn-block text-left font-weight-bold collapsed" type="button"
-									data-toggle="collapse" data-target="#collapseFour" aria-expanded="false"
-									aria-controls="collapseFour">
+								<button class="btn btn-block text-left font-weight-bold collapsed" type="button" data-toggle="collapse"
+									data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
 									Is there a difference in meter bases?
 								</button>
 							</h2>
 						</div>
 
-						<div id="collapseFour" class="collapse" aria-labelledby="headingFour"
-							data-parent="#accordionFAQ">
+						<div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionFAQ">
 							<div class="card-body mb-3">
 								Yes, There are three types. Overhead only, Underground only, and Overhead/Underground
 								combination bases. However, combination boxes are not recommended for Underground
@@ -988,16 +969,14 @@
 					<div class="card">
 						<div class="card-header bg-white" id="headingFive">
 							<h2 class="mb-0">
-								<button class="btn btn-block text-left font-weight-bold collapsed" type="button"
-									data-toggle="collapse" data-target="#collapseFive" aria-expanded="false"
-									aria-controls="collapseFive">
+								<button class="btn btn-block text-left font-weight-bold collapsed" type="button" data-toggle="collapse"
+									data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
 									Can septic lines be installed under power lines?
 								</button>
 							</h2>
 						</div>
 
-						<div id="collapseFive" class="collapse" aria-labelledby="headingFive"
-							data-parent="#accordionFAQ">
+						<div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionFAQ">
 							<div class="card-body mb-3">
 								Yes.
 							</div>
@@ -1006,9 +985,8 @@
 					<div class="card">
 						<div class="card-header bg-white" id="headingSix">
 							<h2 class="mb-0">
-								<button class="btn btn-block text-left font-weight-bold collapsed" type="button"
-									data-toggle="collapse" data-target="#collapseSix" aria-expanded="false"
-									aria-controls="collapseSix">
+								<button class="btn btn-block text-left font-weight-bold collapsed" type="button" data-toggle="collapse"
+									data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
 									Can permanent service be installed if the house has had a ruff in inspection?
 								</button>
 							</h2>
@@ -1024,16 +1002,14 @@
 					<div class="card">
 						<div class="card-header bg-white" id="headingSeven">
 							<h2 class="mb-0">
-								<button class="btn btn-block text-left font-weight-bold collapsed" type="button"
-									data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false"
-									aria-controls="collapseSeven">
+								<button class="btn btn-block text-left font-weight-bold collapsed" type="button" data-toggle="collapse"
+									data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
 									What about outdoor lighting?
 								</button>
 							</h2>
 						</div>
 
-						<div id="collapseSeven" class="collapse" aria-labelledby="headingSeven"
-							data-parent="#accordionFAQ">
+						<div id="collapseSeven" class="collapse" aria-labelledby="headingSeven" data-parent="#accordionFAQ">
 							<div class="card-body mb-3">
 								We offer a variety of lighting products including decorative colonial, cobra head,
 								directional floodlights, and security lights. We can customize plans to fit any lighting
@@ -1054,24 +1030,28 @@
 							<div class="col-md-8 px-0">
 								<input type="text" size="" class="form-control my-2" id="staticEmail2" value="email@example.com">
 							</div>
-							<div class="col-md-4 px-0"><input type="tel" class="form-control my-2" id="YourPhone" placeholder="Your Phone"
-									pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required></div>
+							<div class="col-md-4 px-0"><input type="tel" class="form-control my-2" id="YourPhone"
+									placeholder="Your Phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required></div>
 						</div>
 						<textarea name="" id="" cols="30" rows="10" class="my-2 w-100 form-control"></textarea>
 						<p class="text-muted">All Electrical work must be done by a qualified licensed electrician.</p>
-						<button type="submit" class="btn btn-success"><i class="fas fa-bolt text-white mr-2"></i>Ask your question</button>
+						<button type="submit" class="btn btn-success"><i class="fas fa-bolt text-white mr-2"></i>Ask your
+							question</button>
 					</form>
 				</div>
 			</div>
 		</div>
 	</section>
-	
+
 	<!-- Start Footer -->
 	<footer class="bg-dark mt-3">
 		<div class="container">
 			<div class="row">
-				<a class="text-light col-lg-6 my-3" href="#"><h3>Electrician</h3></a>
-				<p class="text-light col-lg-6 my-3">Our experienced electricians are highly trained in all aspects of electrical service, from office lighting and security systems to emergency repair.</p>
+				<a class="text-light col-lg-6 my-3" href="#">
+					<h3>Electrician</h3>
+				</a>
+				<p class="text-light col-lg-6 my-3">Our experienced electricians are highly trained in all aspects of electrical
+					service, from office lighting and security systems to emergency repair.</p>
 			</div>
 			<div class="row">
 				<div class="col-sm-6 my-3">
@@ -1103,7 +1083,7 @@
 							<a href="tel:1 (800) 7 65-43-21" class="my-0 text-light text-right">1 (800) 765-43-21</a>
 						</div>
 					</div>
-					
+
 				</div>
 				<iframe
 					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4997.108146875935!2d6.7681647776983445!3d51.227289868360145!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b8ca1977193c49%3A0x52760fc4a2dc0f0!2sAltstadt%2C%2040213%20D%C3%BCsseldorf!5e0!3m2!1sen!2sde!4v1605782056388!5m2!1sen!2sde"
@@ -1507,7 +1487,7 @@
 			}
 
 
-			// Finding between dates MADNESS. Needs refactoring and smartening up :)
+
 			function addChosenDates(firstClicked, secondClicked, selected) {
 				if (secondClicked.date > firstClicked.date || secondClicked.month > firstClicked.month || secondClicked.year > firstClicked.year) {
 
